samples/_failures_safe/1761718864_c89cf4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f56ba6f.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_1f56ba6f.c:163:55: error: expected ‘;’ at end of input
  163 |         case TOKEN_OPERATOR: printf("OPERATOR"); break
      |                                                       ^
      |                                                       ;
./samples/SAFE/__tmp_1f56ba6f.c:163:9: error: expected declaration or statement at end of input
  163 |         case TOKEN_OPERATOR: printf("OPERATOR"); break
      |         ^~~~
./samples/SAFE/__tmp_1f56ba6f.c:163:9: error: expected declaration or statement at end of input
